# six-degrees-backend-rust

./: .dockerignore  Cargo.toml  Dockerfile  Rocket.toml
src/: lib.rs  main.rs  request_controller.rs  six_degrees_config.rs  tmdb.rs
src/resources/: log_config.yaml
