[package]
name = "six-degrees-backend-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10.63" , features = ["vendored"]}
reqwest = "0.11.24"
rocket = { version = "0.5.0", features = ["secrets", "tls", "json", "uuid"] }
tokio = "1.36.0"
