[package]
name = "six-degrees-backend-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10.63" , features = ["vendored"]}
reqwest = {version =  "0.11.24", features = ["blocking", "serde_json"] }
rocket = { version = "0.5.0", features = ["secrets", "tls", "json", "uuid"] }
serde_json = "1.0.113"
tokio = "1.36.0"
serde = { version = "1.0.196", features = ["derive"] }
figment = { version = "0.10.14", features = ["env", "yaml", "toml", "json"] }
