[package]
name = "six-degrees-backend-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10.64", features = ["vendored"] }
reqwest = { version = "0.12.2" }
rocket = { version = "0.5.0", features = ["secrets", "tls", "json", "uuid"] }
serde_json = "1.0.115"
tokio = "1.37.0"
serde = { version = "1.0.197", features = ["derive"] }
figment = { version = "0.10.15", features = ["env", "yaml", "toml", "json"] }
